parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> query
Rule 1     query -> select_stmt
Rule 2     select_stmt -> SELECT optional_distinct select_list FROM ID optional_where optional_group optional_having optional_order optional_limit
Rule 3     select_stmt -> SELECT COUNT LPAREN STAR RPAREN FROM ID optional_where optional_group
Rule 4     select_stmt -> SELECT SUM LPAREN ID RPAREN FROM ID optional_where optional_group
Rule 5     select_stmt -> SELECT AVG LPAREN ID RPAREN FROM ID optional_where optional_group
Rule 6     select_stmt -> SELECT MIN LPAREN ID RPAREN FROM ID optional_where optional_group
Rule 7     select_stmt -> SELECT MAX LPAREN ID RPAREN FROM ID optional_where optional_group
Rule 8     optional_where -> WHERE condition
Rule 9     optional_where -> empty
Rule 10    optional_group -> GROUP BY group_by_list
Rule 11    optional_group -> empty
Rule 12    group_by_list -> ID
Rule 13    group_by_list -> group_by_list COMMA ID
Rule 14    optional_having -> HAVING having_condition
Rule 15    optional_having -> empty
Rule 16    having_condition -> aggregate_comparison
Rule 17    aggregate_comparison -> COUNT LPAREN STAR RPAREN comparator NUMBER
Rule 18    aggregate_comparison -> aggregate_func LPAREN ID RPAREN comparator NUMBER
Rule 19    optional_order -> ORDER BY order_by_expr
Rule 20    optional_order -> empty
Rule 21    order_by_expr -> ID
Rule 22    order_by_expr -> ID ASC
Rule 23    order_by_expr -> ID DESC
Rule 24    order_by_expr -> COUNT LPAREN STAR RPAREN
Rule 25    order_by_expr -> COUNT LPAREN STAR RPAREN ASC
Rule 26    order_by_expr -> COUNT LPAREN STAR RPAREN DESC
Rule 27    order_by_expr -> aggregate_func LPAREN ID RPAREN
Rule 28    order_by_expr -> aggregate_func LPAREN ID RPAREN ASC
Rule 29    order_by_expr -> aggregate_func LPAREN ID RPAREN DESC
Rule 30    aggregate_func -> SUM
Rule 31    aggregate_func -> AVG
Rule 32    aggregate_func -> MIN
Rule 33    aggregate_func -> MAX
Rule 34    optional_limit -> LIMIT NUMBER
Rule 35    optional_limit -> empty
Rule 36    empty -> <empty>
Rule 37    optional_distinct -> DISTINCT
Rule 38    optional_distinct -> empty
Rule 39    select_list -> STAR
Rule 40    select_list -> column_list
Rule 41    column_list -> column_item
Rule 42    column_list -> column_list COMMA column_item
Rule 43    column_item -> ID
Rule 44    column_item -> COUNT LPAREN STAR RPAREN
Rule 45    column_item -> SUM LPAREN ID RPAREN
Rule 46    column_item -> AVG LPAREN ID RPAREN
Rule 47    column_item -> MIN LPAREN ID RPAREN
Rule 48    column_item -> MAX LPAREN ID RPAREN
Rule 49    condition -> or_condition
Rule 50    or_condition -> and_condition
Rule 51    or_condition -> or_condition OR and_condition
Rule 52    and_condition -> not_condition
Rule 53    and_condition -> and_condition AND not_condition
Rule 54    not_condition -> simple_condition
Rule 55    not_condition -> NOT simple_condition
Rule 56    simple_condition -> ID comparator value
Rule 57    comparator -> EQUAL
Rule 58    comparator -> GT
Rule 59    comparator -> LT
Rule 60    comparator -> GE
Rule 61    comparator -> LE
Rule 62    value -> NUMBER
Rule 63    value -> STRING

Terminals, with rules where they appear

AND                  : 53
ASC                  : 22 25 28
AVG                  : 5 31 46
BY                   : 10 19
COMMA                : 13 42
COUNT                : 3 17 24 25 26 44
DESC                 : 23 26 29
DISTINCT             : 37
EQUAL                : 57
FROM                 : 2 3 4 5 6 7
GE                   : 60
GROUP                : 10
GT                   : 58
HAVING               : 14
ID                   : 2 3 4 4 5 5 6 6 7 7 12 13 18 21 22 23 27 28 29 43 45 46 47 48 56
LE                   : 61
LIMIT                : 34
LPAREN               : 3 4 5 6 7 17 18 24 25 26 27 28 29 44 45 46 47 48
LT                   : 59
MAX                  : 7 33 48
MIN                  : 6 32 47
NOT                  : 55
NUMBER               : 17 18 34 62
OR                   : 51
ORDER                : 19
RPAREN               : 3 4 5 6 7 17 18 24 25 26 27 28 29 44 45 46 47 48
SELECT               : 2 3 4 5 6 7
STAR                 : 3 17 24 25 26 39 44
STRING               : 63
SUM                  : 4 30 45
WHERE                : 8
error                : 

Nonterminals, with rules where they appear

aggregate_comparison : 16
aggregate_func       : 18 27 28 29
and_condition        : 50 51 53
column_item          : 41 42
column_list          : 40 42
comparator           : 17 18 56
condition            : 8
empty                : 9 11 15 20 35 38
group_by_list        : 10 13
having_condition     : 14
not_condition        : 52 53
optional_distinct    : 2
optional_group       : 2 3 4 5 6 7
optional_having      : 2
optional_limit       : 2
optional_order       : 2
optional_where       : 2 3 4 5 6 7
or_condition         : 49 51
order_by_expr        : 19
query                : 0
select_list          : 2
select_stmt          : 1
simple_condition     : 54 55
value                : 56

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . select_stmt
    (2) select_stmt -> . SELECT optional_distinct select_list FROM ID optional_where optional_group optional_having optional_order optional_limit
    (3) select_stmt -> . SELECT COUNT LPAREN STAR RPAREN FROM ID optional_where optional_group
    (4) select_stmt -> . SELECT SUM LPAREN ID RPAREN FROM ID optional_where optional_group
    (5) select_stmt -> . SELECT AVG LPAREN ID RPAREN FROM ID optional_where optional_group
    (6) select_stmt -> . SELECT MIN LPAREN ID RPAREN FROM ID optional_where optional_group
    (7) select_stmt -> . SELECT MAX LPAREN ID RPAREN FROM ID optional_where optional_group

    SELECT          shift and go to state 3

    query                          shift and go to state 1
    select_stmt                    shift and go to state 2

state 1

    (0) S' -> query .



state 2

    (1) query -> select_stmt .

    $end            reduce using rule 1 (query -> select_stmt .)


state 3

    (2) select_stmt -> SELECT . optional_distinct select_list FROM ID optional_where optional_group optional_having optional_order optional_limit
    (3) select_stmt -> SELECT . COUNT LPAREN STAR RPAREN FROM ID optional_where optional_group
    (4) select_stmt -> SELECT . SUM LPAREN ID RPAREN FROM ID optional_where optional_group
    (5) select_stmt -> SELECT . AVG LPAREN ID RPAREN FROM ID optional_where optional_group
    (6) select_stmt -> SELECT . MIN LPAREN ID RPAREN FROM ID optional_where optional_group
    (7) select_stmt -> SELECT . MAX LPAREN ID RPAREN FROM ID optional_where optional_group
    (37) optional_distinct -> . DISTINCT
    (38) optional_distinct -> . empty
    (36) empty -> .

  ! shift/reduce conflict for COUNT resolved as shift
  ! shift/reduce conflict for SUM resolved as shift
  ! shift/reduce conflict for AVG resolved as shift
  ! shift/reduce conflict for MIN resolved as shift
  ! shift/reduce conflict for MAX resolved as shift
    COUNT           shift and go to state 5
    SUM             shift and go to state 6
    AVG             shift and go to state 7
    MIN             shift and go to state 8
    MAX             shift and go to state 9
    DISTINCT        shift and go to state 10
    STAR            reduce using rule 36 (empty -> .)
    ID              reduce using rule 36 (empty -> .)

  ! COUNT           [ reduce using rule 36 (empty -> .) ]
  ! SUM             [ reduce using rule 36 (empty -> .) ]
  ! AVG             [ reduce using rule 36 (empty -> .) ]
  ! MIN             [ reduce using rule 36 (empty -> .) ]
  ! MAX             [ reduce using rule 36 (empty -> .) ]

    optional_distinct              shift and go to state 4
    empty                          shift and go to state 11

state 4

    (2) select_stmt -> SELECT optional_distinct . select_list FROM ID optional_where optional_group optional_having optional_order optional_limit
    (39) select_list -> . STAR
    (40) select_list -> . column_list
    (41) column_list -> . column_item
    (42) column_list -> . column_list COMMA column_item
    (43) column_item -> . ID
    (44) column_item -> . COUNT LPAREN STAR RPAREN
    (45) column_item -> . SUM LPAREN ID RPAREN
    (46) column_item -> . AVG LPAREN ID RPAREN
    (47) column_item -> . MIN LPAREN ID RPAREN
    (48) column_item -> . MAX LPAREN ID RPAREN

    STAR            shift and go to state 14
    ID              shift and go to state 13
    COUNT           shift and go to state 17
    SUM             shift and go to state 18
    AVG             shift and go to state 19
    MIN             shift and go to state 20
    MAX             shift and go to state 21

    select_list                    shift and go to state 12
    column_list                    shift and go to state 15
    column_item                    shift and go to state 16

state 5

    (3) select_stmt -> SELECT COUNT . LPAREN STAR RPAREN FROM ID optional_where optional_group

    LPAREN          shift and go to state 22


state 6

    (4) select_stmt -> SELECT SUM . LPAREN ID RPAREN FROM ID optional_where optional_group

    LPAREN          shift and go to state 23


state 7

    (5) select_stmt -> SELECT AVG . LPAREN ID RPAREN FROM ID optional_where optional_group

    LPAREN          shift and go to state 24


state 8

    (6) select_stmt -> SELECT MIN . LPAREN ID RPAREN FROM ID optional_where optional_group

    LPAREN          shift and go to state 25


state 9

    (7) select_stmt -> SELECT MAX . LPAREN ID RPAREN FROM ID optional_where optional_group

    LPAREN          shift and go to state 26


state 10

    (37) optional_distinct -> DISTINCT .

    STAR            reduce using rule 37 (optional_distinct -> DISTINCT .)
    ID              reduce using rule 37 (optional_distinct -> DISTINCT .)
    COUNT           reduce using rule 37 (optional_distinct -> DISTINCT .)
    SUM             reduce using rule 37 (optional_distinct -> DISTINCT .)
    AVG             reduce using rule 37 (optional_distinct -> DISTINCT .)
    MIN             reduce using rule 37 (optional_distinct -> DISTINCT .)
    MAX             reduce using rule 37 (optional_distinct -> DISTINCT .)


state 11

    (38) optional_distinct -> empty .

    STAR            reduce using rule 38 (optional_distinct -> empty .)
    ID              reduce using rule 38 (optional_distinct -> empty .)
    COUNT           reduce using rule 38 (optional_distinct -> empty .)
    SUM             reduce using rule 38 (optional_distinct -> empty .)
    AVG             reduce using rule 38 (optional_distinct -> empty .)
    MIN             reduce using rule 38 (optional_distinct -> empty .)
    MAX             reduce using rule 38 (optional_distinct -> empty .)


state 12

    (2) select_stmt -> SELECT optional_distinct select_list . FROM ID optional_where optional_group optional_having optional_order optional_limit

    FROM            shift and go to state 27


state 13

    (43) column_item -> ID .

    COMMA           reduce using rule 43 (column_item -> ID .)
    FROM            reduce using rule 43 (column_item -> ID .)


state 14

    (39) select_list -> STAR .

    FROM            reduce using rule 39 (select_list -> STAR .)


state 15

    (40) select_list -> column_list .
    (42) column_list -> column_list . COMMA column_item

    FROM            reduce using rule 40 (select_list -> column_list .)
    COMMA           shift and go to state 28


state 16

    (41) column_list -> column_item .

    COMMA           reduce using rule 41 (column_list -> column_item .)
    FROM            reduce using rule 41 (column_list -> column_item .)


state 17

    (44) column_item -> COUNT . LPAREN STAR RPAREN

    LPAREN          shift and go to state 29


state 18

    (45) column_item -> SUM . LPAREN ID RPAREN

    LPAREN          shift and go to state 30


state 19

    (46) column_item -> AVG . LPAREN ID RPAREN

    LPAREN          shift and go to state 31


state 20

    (47) column_item -> MIN . LPAREN ID RPAREN

    LPAREN          shift and go to state 32


state 21

    (48) column_item -> MAX . LPAREN ID RPAREN

    LPAREN          shift and go to state 33


state 22

    (3) select_stmt -> SELECT COUNT LPAREN . STAR RPAREN FROM ID optional_where optional_group

    STAR            shift and go to state 34


state 23

    (4) select_stmt -> SELECT SUM LPAREN . ID RPAREN FROM ID optional_where optional_group

    ID              shift and go to state 35


state 24

    (5) select_stmt -> SELECT AVG LPAREN . ID RPAREN FROM ID optional_where optional_group

    ID              shift and go to state 36


state 25

    (6) select_stmt -> SELECT MIN LPAREN . ID RPAREN FROM ID optional_where optional_group

    ID              shift and go to state 37


state 26

    (7) select_stmt -> SELECT MAX LPAREN . ID RPAREN FROM ID optional_where optional_group

    ID              shift and go to state 38


state 27

    (2) select_stmt -> SELECT optional_distinct select_list FROM . ID optional_where optional_group optional_having optional_order optional_limit

    ID              shift and go to state 39


state 28

    (42) column_list -> column_list COMMA . column_item
    (43) column_item -> . ID
    (44) column_item -> . COUNT LPAREN STAR RPAREN
    (45) column_item -> . SUM LPAREN ID RPAREN
    (46) column_item -> . AVG LPAREN ID RPAREN
    (47) column_item -> . MIN LPAREN ID RPAREN
    (48) column_item -> . MAX LPAREN ID RPAREN

    ID              shift and go to state 13
    COUNT           shift and go to state 17
    SUM             shift and go to state 18
    AVG             shift and go to state 19
    MIN             shift and go to state 20
    MAX             shift and go to state 21

    column_item                    shift and go to state 40

state 29

    (44) column_item -> COUNT LPAREN . STAR RPAREN

    STAR            shift and go to state 41


state 30

    (45) column_item -> SUM LPAREN . ID RPAREN

    ID              shift and go to state 42


state 31

    (46) column_item -> AVG LPAREN . ID RPAREN

    ID              shift and go to state 43


state 32

    (47) column_item -> MIN LPAREN . ID RPAREN

    ID              shift and go to state 44


state 33

    (48) column_item -> MAX LPAREN . ID RPAREN

    ID              shift and go to state 45


state 34

    (3) select_stmt -> SELECT COUNT LPAREN STAR . RPAREN FROM ID optional_where optional_group

    RPAREN          shift and go to state 46


state 35

    (4) select_stmt -> SELECT SUM LPAREN ID . RPAREN FROM ID optional_where optional_group

    RPAREN          shift and go to state 47


state 36

    (5) select_stmt -> SELECT AVG LPAREN ID . RPAREN FROM ID optional_where optional_group

    RPAREN          shift and go to state 48


state 37

    (6) select_stmt -> SELECT MIN LPAREN ID . RPAREN FROM ID optional_where optional_group

    RPAREN          shift and go to state 49


state 38

    (7) select_stmt -> SELECT MAX LPAREN ID . RPAREN FROM ID optional_where optional_group

    RPAREN          shift and go to state 50


state 39

    (2) select_stmt -> SELECT optional_distinct select_list FROM ID . optional_where optional_group optional_having optional_order optional_limit
    (8) optional_where -> . WHERE condition
    (9) optional_where -> . empty
    (36) empty -> .

    WHERE           shift and go to state 52
    GROUP           reduce using rule 36 (empty -> .)
    HAVING          reduce using rule 36 (empty -> .)
    ORDER           reduce using rule 36 (empty -> .)
    LIMIT           reduce using rule 36 (empty -> .)
    $end            reduce using rule 36 (empty -> .)

    optional_where                 shift and go to state 51
    empty                          shift and go to state 53

state 40

    (42) column_list -> column_list COMMA column_item .

    COMMA           reduce using rule 42 (column_list -> column_list COMMA column_item .)
    FROM            reduce using rule 42 (column_list -> column_list COMMA column_item .)


state 41

    (44) column_item -> COUNT LPAREN STAR . RPAREN

    RPAREN          shift and go to state 54


state 42

    (45) column_item -> SUM LPAREN ID . RPAREN

    RPAREN          shift and go to state 55


state 43

    (46) column_item -> AVG LPAREN ID . RPAREN

    RPAREN          shift and go to state 56


state 44

    (47) column_item -> MIN LPAREN ID . RPAREN

    RPAREN          shift and go to state 57


state 45

    (48) column_item -> MAX LPAREN ID . RPAREN

    RPAREN          shift and go to state 58


state 46

    (3) select_stmt -> SELECT COUNT LPAREN STAR RPAREN . FROM ID optional_where optional_group

    FROM            shift and go to state 59


state 47

    (4) select_stmt -> SELECT SUM LPAREN ID RPAREN . FROM ID optional_where optional_group

    FROM            shift and go to state 60


state 48

    (5) select_stmt -> SELECT AVG LPAREN ID RPAREN . FROM ID optional_where optional_group

    FROM            shift and go to state 61


state 49

    (6) select_stmt -> SELECT MIN LPAREN ID RPAREN . FROM ID optional_where optional_group

    FROM            shift and go to state 62


state 50

    (7) select_stmt -> SELECT MAX LPAREN ID RPAREN . FROM ID optional_where optional_group

    FROM            shift and go to state 63


state 51

    (2) select_stmt -> SELECT optional_distinct select_list FROM ID optional_where . optional_group optional_having optional_order optional_limit
    (10) optional_group -> . GROUP BY group_by_list
    (11) optional_group -> . empty
    (36) empty -> .

    GROUP           shift and go to state 65
    HAVING          reduce using rule 36 (empty -> .)
    ORDER           reduce using rule 36 (empty -> .)
    LIMIT           reduce using rule 36 (empty -> .)
    $end            reduce using rule 36 (empty -> .)

    optional_group                 shift and go to state 64
    empty                          shift and go to state 66

state 52

    (8) optional_where -> WHERE . condition
    (49) condition -> . or_condition
    (50) or_condition -> . and_condition
    (51) or_condition -> . or_condition OR and_condition
    (52) and_condition -> . not_condition
    (53) and_condition -> . and_condition AND not_condition
    (54) not_condition -> . simple_condition
    (55) not_condition -> . NOT simple_condition
    (56) simple_condition -> . ID comparator value

    NOT             shift and go to state 72
    ID              shift and go to state 73

    condition                      shift and go to state 67
    or_condition                   shift and go to state 68
    and_condition                  shift and go to state 69
    not_condition                  shift and go to state 70
    simple_condition               shift and go to state 71

state 53

    (9) optional_where -> empty .

    GROUP           reduce using rule 9 (optional_where -> empty .)
    HAVING          reduce using rule 9 (optional_where -> empty .)
    ORDER           reduce using rule 9 (optional_where -> empty .)
    LIMIT           reduce using rule 9 (optional_where -> empty .)
    $end            reduce using rule 9 (optional_where -> empty .)


state 54

    (44) column_item -> COUNT LPAREN STAR RPAREN .

    COMMA           reduce using rule 44 (column_item -> COUNT LPAREN STAR RPAREN .)
    FROM            reduce using rule 44 (column_item -> COUNT LPAREN STAR RPAREN .)


state 55

    (45) column_item -> SUM LPAREN ID RPAREN .

    COMMA           reduce using rule 45 (column_item -> SUM LPAREN ID RPAREN .)
    FROM            reduce using rule 45 (column_item -> SUM LPAREN ID RPAREN .)


state 56

    (46) column_item -> AVG LPAREN ID RPAREN .

    COMMA           reduce using rule 46 (column_item -> AVG LPAREN ID RPAREN .)
    FROM            reduce using rule 46 (column_item -> AVG LPAREN ID RPAREN .)


state 57

    (47) column_item -> MIN LPAREN ID RPAREN .

    COMMA           reduce using rule 47 (column_item -> MIN LPAREN ID RPAREN .)
    FROM            reduce using rule 47 (column_item -> MIN LPAREN ID RPAREN .)


state 58

    (48) column_item -> MAX LPAREN ID RPAREN .

    COMMA           reduce using rule 48 (column_item -> MAX LPAREN ID RPAREN .)
    FROM            reduce using rule 48 (column_item -> MAX LPAREN ID RPAREN .)


state 59

    (3) select_stmt -> SELECT COUNT LPAREN STAR RPAREN FROM . ID optional_where optional_group

    ID              shift and go to state 74


state 60

    (4) select_stmt -> SELECT SUM LPAREN ID RPAREN FROM . ID optional_where optional_group

    ID              shift and go to state 75


state 61

    (5) select_stmt -> SELECT AVG LPAREN ID RPAREN FROM . ID optional_where optional_group

    ID              shift and go to state 76


state 62

    (6) select_stmt -> SELECT MIN LPAREN ID RPAREN FROM . ID optional_where optional_group

    ID              shift and go to state 77


state 63

    (7) select_stmt -> SELECT MAX LPAREN ID RPAREN FROM . ID optional_where optional_group

    ID              shift and go to state 78


state 64

    (2) select_stmt -> SELECT optional_distinct select_list FROM ID optional_where optional_group . optional_having optional_order optional_limit
    (14) optional_having -> . HAVING having_condition
    (15) optional_having -> . empty
    (36) empty -> .

    HAVING          shift and go to state 80
    ORDER           reduce using rule 36 (empty -> .)
    LIMIT           reduce using rule 36 (empty -> .)
    $end            reduce using rule 36 (empty -> .)

    optional_having                shift and go to state 79
    empty                          shift and go to state 81

state 65

    (10) optional_group -> GROUP . BY group_by_list

    BY              shift and go to state 82


state 66

    (11) optional_group -> empty .

    HAVING          reduce using rule 11 (optional_group -> empty .)
    ORDER           reduce using rule 11 (optional_group -> empty .)
    LIMIT           reduce using rule 11 (optional_group -> empty .)
    $end            reduce using rule 11 (optional_group -> empty .)


state 67

    (8) optional_where -> WHERE condition .

    GROUP           reduce using rule 8 (optional_where -> WHERE condition .)
    HAVING          reduce using rule 8 (optional_where -> WHERE condition .)
    ORDER           reduce using rule 8 (optional_where -> WHERE condition .)
    LIMIT           reduce using rule 8 (optional_where -> WHERE condition .)
    $end            reduce using rule 8 (optional_where -> WHERE condition .)


state 68

    (49) condition -> or_condition .
    (51) or_condition -> or_condition . OR and_condition

    GROUP           reduce using rule 49 (condition -> or_condition .)
    HAVING          reduce using rule 49 (condition -> or_condition .)
    ORDER           reduce using rule 49 (condition -> or_condition .)
    LIMIT           reduce using rule 49 (condition -> or_condition .)
    $end            reduce using rule 49 (condition -> or_condition .)
    OR              shift and go to state 83


state 69

    (50) or_condition -> and_condition .
    (53) and_condition -> and_condition . AND not_condition
